stdlib: JVM client TLS — SSLContext wiring for HttpClientBuilder's trust/identity/min-version surface (#5878) (#6006)
* stdlib: JVM client TLS — SSLContext wiring for HttpClientBuilder's trust/identity/min-version surface (#5878)

_kernel_jvm/http_host.l's hostSupportsTlsConfig() flips to true and gains
real KeyStore/TrustManagerFactory/KeyManagerFactory/SSLContext/SSLParameters
wiring for withCaCertificate/withExclusiveCaCertificate/withClientIdentity/
withMinTlsVersion/withInsecureSkipVerify, mirroring the dotnet slice
(#5877, D-progress-691) end-to-end but structurally different: JVM's
java.net.http.HttpClient has no per-request validation callback, so trust
is a KeyStore fed to a TrustManagerFactory (additive = configured CA plus
every platform-accepted issuer; exclusive = configured CA only), and
hostname verification turns out to be structurally un-regressable on this
target (HttpClient enforces it unconditionally regardless of supplied
SSLContext/SSLParameters, verified empirically) rather than needing a
resolveTlsValidationDecision-style callback fix.

Two real FFI limits found and worked around: the JVM auto-FFI cannot pass
a reference-typed Java array as a call argument at all (confirmed against
five independent JDK calls, not just the impl<ExternInterface> case #5931
found), worked around with a java.lang.reflect.{Method,Array} bridge; and
implementing X509TrustManager directly via impl JX509TrustManager for
Record is not FFI-expressible (every method mentions a slice[ExternType]
and hits the same array-erasure gap #5931 documents), so the insecure
all-trusting trust manager is built via Proxy.newProxyInstance + impl
JInvocationHandler for Record instead.

Verified end-to-end against real live TLS peers in the implementing
sandbox: exclusive CA rejects a real public-CA-signed site, additive CA
accepts it while still trusting the extra CA, insecure mode accepts a
real self-signed peer, and a real wrong-hostname peer is rejected on
every path including inse